k8s/vote-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-green
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
      version: green
  template:
    metadata:
      labels:
        app: vote
        version: green
    spec:
      containers:
      - name: vote
        image: 13.63.130.160:5000/vote:latest
        ports:
        - containerPort: 80
