k8s/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-blue
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
      version: blue
  template:
    metadata:
      labels:
        app: vote
        version: blue
    spec:
      containers:
      - name: vote
        image: 13.63.130.160:5000/vote:latest
        ports:
        - containerPort: 80
