k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 22
________________________________________

apiVersion: v1
kind: Service
metadata:
 name: db
 namespace: voting-app
spec:
  selector:
    app: db
  ports:
  - port: 5432
