k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-app
spec:
  selector:
    app: vote
    version: blue
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
