k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - 13.63.160.38.nip.io
    secretName: voting-tls
  rules:
  - host: 13.63.160.38.nip.io
    http:
      paths:
      - path: /
      pathType: Prefix
      backend:
       service:
        name: vote
        port:
         number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
